# game-rl

./: .gitignore  BUGS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: feature.yaml  rimworld-build.yml  rimworld-release.yml
adapters/factorio/: README.md  control.lua  info.json  manifest.json  settings.lua
adapters/factorio/locale/en/: strings.cfg
adapters/rimworld/: README.md  manifest.json
adapters/rimworld/About/: About.xml
adapters/rimworld/Native/macos/: build.sh  gamerl_vision.mm
adapters/rimworld/Plugins/macOS/: libgamerl_vision.dylib
adapters/rimworld/RimWorld.GameRL/: Mod.cs  RimWorld.GameRL.csproj
adapters/rimworld/RimWorld.GameRL/Actions/: ActionResult.cs  MapActions.cs  PawnActions.cs  RimWorldCommandExecutor.cs  ThingResolver.cs
adapters/rimworld/RimWorld.GameRL/Patches/: EventCapturePatch.cs  RngPatch.cs  TickPatch.cs
adapters/rimworld/RimWorld.GameRL/Rewards/: SurvivalReward.cs
adapters/rimworld/RimWorld.GameRL/State/: ColonistExtractor.cs  DeltaObservation.cs  EntityExtractor.cs  ResourceExtractor.cs  RimWorldStateExtractor.cs  VisionStreamManager.cs
adapters/zomboid/: build.gradle  manifest.json
adapters/zomboid/mod/: mod.info
adapters/zomboid/mod/java/com/arkavo/gamerl/zomboid/: Bridge.java  GameRLMod.java  Protocol.java
adapters/zomboid/mod/java/com/arkavo/gamerl/zomboid/actions/: ActionDispatcher.java  ActionResult.java
adapters/zomboid/mod/java/com/arkavo/gamerl/zomboid/rewards/: SurvivalReward.java
adapters/zomboid/mod/java/com/arkavo/gamerl/zomboid/state/: ZomboidStateExtractor.java
adapters/zomboid/mod/media/lua/client/: GameRL.lua
adapters/zomboid/mod/media/lua/client/GameRL/: Main.lua
adapters/zomboid/mod/media/lua/shared/GameRL/: ActionDispatcher.lua  IPC.lua  JSON.lua  Shared.lua  StateExtractor.lua
crates/factorio-bridge/: Cargo.toml
crates/factorio-bridge/src/: bridge.rs  lib.rs  observer.rs  rcon.rs
crates/game-bridge/: Cargo.toml
crates/game-bridge/src/: lib.rs  lua_compat.rs  protocol.rs  tcp.rs  transport.rs  unix.rs
crates/game-rl-cli/: Cargo.toml
crates/game-rl-cli/src/: main.rs
crates/game-rl-client/: Cargo.toml  README.md
crates/game-rl-client/src/: lib.rs
crates/game-rl-core/: Cargo.toml  README.md
crates/game-rl-core/src/: action.rs  agent.rs  error.rs  lib.rs  manifest.rs  observation.rs  reward.rs  stream.rs
crates/game-rl-server/: Cargo.toml  README.md
crates/game-rl-server/src/: environment.rs  lib.rs  mcp.rs  registry.rs  tools.rs
crates/game-rl-server/src/transport/: mod.rs  stdio.rs
crates/harmony-bridge/: Cargo.toml  README.md
crates/harmony-bridge/src/: ipc.rs  lib.rs  main.rs  protocol.rs
crates/zomboid-bridge/: Cargo.toml
crates/zomboid-bridge/src/: bridge.rs  lib.rs  main.rs
docs/: RIMWORLD_INTEGRATION.md  RIMWORLD_INTEGRATION_GUIDE.md
dotnet/: GameRL.Harmony.sln
dotnet/GameRL.Harmony/: Bridge.cs  GameRL.Harmony.csproj  ICommandExecutor.cs  IStateExtractor.cs  SimpleMsgPack.cs  UnixEndPoint.cs
dotnet/GameRL.Harmony/Protocol/: Messages.cs
dotnet/GameRL.Harmony/RPC/: GameRLActionAttribute.cs  GameRLParamAttribute.cs  HarmonyRPC.cs
