[workspace]
resolver = "2"
members = [
    "crates/game-rl-core",
    "crates/game-rl-server",
    "crates/game-rl-client",
    "crates/harmony-bridge",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkavo-ai/game-rl"
authors = ["Arkavo <info@arkavo.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"  # MessagePack

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# IPC
interprocess = "2.0"

# Hashing (for state_hash)
sha2 = "0.10"
hex = "0.4"

# Testing
tokio-test = "0.4"

# Internal crates
game-rl-core = { path = "crates/game-rl-core" }
game-rl-server = { path = "crates/game-rl-server" }
game-rl-client = { path = "crates/game-rl-client" }
harmony-bridge = { path = "crates/harmony-bridge" }

[profile.release]
lto = true
codegen-units = 1
