[package]
name = "factorio-bridge"
description = "Bridge between Rust MCP server and Factorio via RCON + file IPC"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
game-rl-core = { workspace = true }
game-rl-server = { workspace = true }
game-bridge = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
