[package]
name = "game-bridge"
description = "Shared bridge infrastructure for game-rl adapters"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
game-rl-core = { workspace = true }
game-rl-server = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
mlua = { version = "0.10", features = ["lua51", "vendored"] }
