[package]
name = "game-rl-cli"
description = "Game-RL MCP server CLI with auto-detection"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "game-rl-server"
path = "src/main.rs"

[dependencies]
game-rl-server = { workspace = true }
harmony-bridge = { workspace = true }
zomboid-bridge = { workspace = true }
factorio-bridge = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
