[package]
name = "harmony-bridge"
description = "Bridge between Rust MCP server and .NET games via Harmony"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "harmony-server"
path = "src/main.rs"

[dependencies]
game-rl-core = { workspace = true }
game-rl-server = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
