[package]
name = "zomboid-bridge"
description = "Bridge between Rust MCP server and Project Zomboid via Java mod"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "zomboid-server"
path = "src/main.rs"

[dependencies]
game-rl-core = { workspace = true }
game-rl-server = { workspace = true }
game-bridge = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
